--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Django==1.7
+Django>=2.5
 Fabric==1.10.1
 South==1.0.2
 django-crontab==0.6.0
-ecdsa==0.13
-paramiko==1.15.2
-pycrypto==2.6.1
+ecdsa>0.13
+paramiko>=1.15.2
+pycrypto>=2.6.1
 wsgiref==0.1.2
